<resources>
    <string name="app_name">Cuestionario</string>
    <string name="boton_verdadero">Verdadero</string>
    <string name="boton_falso">Falso</string>
    <string name="boton_siguiente">Siguiente</string>
    <string name="boton_atras">Atras</string>
    <string name="texview_titulo">ENCUESTAS PARA EL USUARIO</string>
    <string name="texview_pregunta">Ayacucho cumplio 435 años de fundacion</string>
    <string name="boton_cerrar">Cerrar</string>
</resources>